chore(body): complete create the html  main section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <!-- Main section -->
+    <h1>Discover hidden places in the world around you</h1>
+
+    <p><a class="cta" href="#">Download WanToGo (Coming soon!)</a></p>
+
+    <video autoplay muted loop>
+      <source src="./src/videos/wantogo.mp4" type="video/mp4">
+    </video>
+
     <!-- First supporting section -->
     <!-- Second supporting section -->
     <!-- Footer -->
