chore(body): complete create first support section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     </video>
 
     <!-- First supporting section -->
+    <h2>Your personal travel guide</h2>
+    <p>WanToGo remembers places you like, and recommends new points of interest around you.</p>
+    
+    <p><img src="./src/images/camp.png" alt=""></p>
     <!-- Second supporting section -->
     <!-- Footer -->
 </body>
