chore(body): add class for images

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     
     <h2>Coming Soon for iPhone and Android</h2>
     
-    <p><img class="app" src="./src/images/phone.png"></p>
+    <p class="image-container"><img class="app" src="./src/images/phone.png"></p>
 
-    <p><a class="cta" href="#">Download WanToGo (Coming soon!)</a></p>
+    <p class="image-container"><a class="cta" href="#">Download WanToGo (Coming soon!)</a></p>
 
     <!-- Footer -->
     <div class="footer">
